# log_scope

./: .gitignore  LogScope  LogScope.cabal  Makefile  Railoscopy  Railoscopy.cabal  StyleGuide  run.sh  test.hs  useful_javascript.txt
frontend/: App.hi  App.hs  App.js  index.html
frontend/main/: Main.jsmod
src/: Client.hs  LogScope.hi  LogScope.hs  LogScope.js  Main.hi  Main.hs  Main.html  Main.js  Makefile  Notification.hs  Parsers.hi  Parsers.hs  Railoscopy.hs  RailsEvent.hs  StyleGuide.hs  Types.hi  Types.hs  UdpServer.hs  app.hs  build_log_scope.sh  build_railoscopy.sh  build_style_guide.sh  index.html  proto.html  styleguide.html  styleguide.sh
src/Client/: Client.hi  Client.hs
src/Client/UI/: Request.hi  Request.hs
src/Server/: UdpServer.hs
src/Types/: RailsEvent.hs  Request.hi  Request.hs
src/css/: accordion.css  default_highlight.css  overrides.css
src/js/: helpers.js
src/main/: LogScope.jsmod  Main.jsmod  Types.jsmod
test/: Main.hs  Tasty.hs
test/Unit/: Parsers.hs  RailsEvent.hs
test/json/: sql_active_record.json  start_processing_action_controller.json
