name:                LogScope
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

Flag Haste-inst
  Description: either if it is being compiled with haste-inst or with cabal
  Default: False

executable LogScope
  if flag(haste-inst)
    hs-source-dirs: src .
    main-is: Main.hs
    buildable: True
    ghc-options: --output-html
    build-depends: 
        base >4.0 && <5
      , text
      -- , attoparsec
      , pipes
      -- , pipes-attoparsec
      , pipes-parse
      -- , pipes-text
      , transformers
      , haste-lib
  else
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -static -Wall
    buildable: True
    build-depends:
        base >= 4 && <= 5
      , text
      , attoparsec
      , pipes
      , pipes-attoparsec
      , pipes-parse
      , pipes-text
      , transformers
      , haste-compiler


