name:                LogScope
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

Flag Haste-inst
  Description: either if it is being compiled with haste-inst or with cabal
  Default: False

executable StyleGuide
  if flag(haste-inst)
    hs-source-dirs: src
    main-is: StyleGuide.hs
    buildable: True
    ghc-options: --output-html
    build-depends:
        base >4 && <5
      , haste-lib
      , haste-perch

  else
    hs-source-dirs: src
    main-is:        StyleGuide.hs
    ghc-options:    -static -Wall
    buildable: True
    build-depends:
        base >= 4 && <= 5
      , haste-compiler
      , haste-perch


executable LogScope
  if flag(haste-inst)
    hs-source-dirs: src
    main-is: Main.hs
    buildable: True
    ghc-options: --output-html
    build-depends:
        base >4 && <5
      , haste-lib
      , haste-perch

  else
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -static -Wall
    buildable: True
    build-depends:
        base >= 4 && <= 5
      , text
      , attoparsec
      , pipes
      , pipes-attoparsec
      , pipes-parse
      , pipes-text
      , transformers
      , aeson
      , lens
      , network
      , bytestring
      , haste-compiler
      , haste-perch

-- cabal install with tests support:
-- cabal install --enable-tests

-- to run:
-- cabal install --only-dependencies --enable-tests
-- cabal configure --enable-tests
-- cabal build
-- cabal test

test-suite Tasty
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test, src
  main-is:          Main.hs
  build-depends:
      base >= 4
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , attoparsec
    , aeson
    , bytestring

